testing/tests/ui/macro_named_argument.stderr
error: missing argument when calling macro `thrice`: `param1`
 --> InvalidNamedArg.html:5:2
       "- call thrice(param1=2, param3=3) -%}"
 --> tests/ui/macro_named_argument.rs:4:21
  |
4 |   #[template(source = "{%- macro thrice(param1, param2) -%}
  |  _____________________^
5 | | {{ param1 }} {{ param2 }}
6 | | {%- endmacro -%}
7 | |
8 | | {%- call thrice(param1=2, param3=3) -%}", ext = "html")]
  | |________________________________________^

error: named argument `param1` was passed more than once
 --> <source attribute>:5:15
       "(param1=2, param1=3) -%}"
  --> tests/ui/macro_named_argument.rs:12:21
   |
12 |   #[template(source = "{%- macro thrice(param1, param2) -%}
   |  _____________________^
13 | | {{ param1 }} {{ param2 }}
14 | | {%- endmacro -%}
15 | |
16 | | {%- call thrice(param1=2, param1=3) -%}", ext = "html")]
   | |________________________________________^

error: failed to parse template source
 --> <source attribute>:5:28
       "|filter(param1=12) -%}"
  --> tests/ui/macro_named_argument.rs:21:21
   |
21 |   #[template(source = "{%- macro thrice(param1, param2) -%}
   |  _____________________^
22 | | {{ param1 }} {{ param2 }}
23 | | {%- endmacro -%}
24 | |
25 | | {%- call thrice(3, param1=2)|filter(param1=12) -%}", ext = "html")]
   | |___________________________________________________^

error: named arguments must always be passed last
 --> <source attribute>:4:15
       "(param1=2, 3) -%}"
  --> tests/ui/macro_named_argument.rs:30:21
   |
30 |   #[template(source = "{%- macro thrice(param1, param2) -%}
   |  _____________________^
31 | | {{ param1 }} {{ param2 }}
32 | | {%- endmacro -%}
33 | | {%- call thrice(param1=2, 3) -%}", ext = "html")]
   | |_________________________________^

error: argument `param1` is passed more than once when calling macro `thrice`
 --> InvalidNamedArg5.html:4:2
       "- call thrice(3, param1=2) -%}"
  --> tests/ui/macro_named_argument.rs:38:21
   |
38 |   #[template(source = "{%- macro thrice(param1, param2) -%}
   |  _____________________^
39 | | {{ param1 }} {{ param2 }}
40 | | {%- endmacro -%}
41 | | {%- call thrice(3, param1=2) -%}", ext = "html")]
   | |_________________________________^

error: missing arguments when calling macro `thrice`: `param1` and `param2`
 --> MissingArgs.html:3:2
       "- call thrice() -%}"
  --> tests/ui/macro_named_argument.rs:45:21
   |
45 |   #[template(source = "{%- macro thrice(param1, param2) -%}
   |  _____________________^
46 | | {%- endmacro -%}
47 | | {%- call thrice() -%}", ext = "html")]
   | |______________________^

error: missing argument when calling macro `thrice`: `param1`
 --> MissingArgs2.html:3:2
       "- call thrice() -%}"
  --> tests/ui/macro_named_argument.rs:51:21
   |
51 |   #[template(source = "{%- macro thrice(param1, param2=1) -%}
   |  _____________________^
52 | | {%- endmacro -%}
53 | | {%- call thrice() -%}", ext = "html")]
   | |______________________^
